--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "checkWebpack": "webpack -v",
-    "build": "webpack",
+    "dev": "set type=dev&webpack",
+    "build": "set type=build&webpack",
     "server": "webpack-dev-server --open"
   },
   "author": "Btrya",
