--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "checkWebpack": "webpack -v",
     "dev": "set type=dev&webpack",
     "build": "set type=build&webpack",
-    "server": "webpack-dev-server --open"
+    "server": "webpack-dev-server --open",
+    "watch": "webpack --watch"
   },
   "author": "Btrya",
   "license": "ISC",
@@ -20,6 +21,7 @@
     "babel-preset-env": "^1.7.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
+    "copy-webpack-plugin": "^4.2.0",
     "css-loader": "^3.5.3",
     "extract-text-webpack-plugin": "^3.0.2",
     "file-loader": "^6.0.0",
@@ -37,6 +39,8 @@
     "webpack-dev-server": "^2.8.2"
   },
   "dependencies": {
-    "html-withimg-loader": "^0.1.16"
+    "html-withimg-loader": "^0.1.16",
+    "jquery": "^3.5.1",
+    "vue": "^2.6.11"
   }
 }
